feat: 예약된 시간대 조회 API 구현